--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,82 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+@import 'animate.css';
+
+
+// animation
+@for $i from 1 through 25 {
+  .duration:nth-child(#{$i}) {
+    animation-duration: (0.2s * $i);
+  }
+}
+
+.fast {
+  animation-duration: (.6s);
+}
+
+@font-face {
+  font-family: "bold";
+  src: url("./assets/fonts/29LTBaseet-Bold.ttf");
+}
+
+@font-face {
+  font-family: "regular";
+  src: url("./assets/fonts/29LTBaseet-Regular.ttf");
+}
+
+* {
+  font-family: "regular";
+}
+
+body {
+  direction: rtl;
+}
+
+ion-header {
+  &::after {
+    display: none;
+  }
+}
+
+.header-ios ion-toolbar:last-of-type {
+  --border-width: 0 !important;
+}
+
+.error-view {
+  background: #fff;
+  position: absolute;
+  /* top: 0; */
+  right: 0;
+  left: 0;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 90%;
+  width: 100%;
+  z-index: 99999;
+
+  .content {
+    text-align: center;
+
+    ion-icon {
+      font-size: 64px;
+    }
+  }
+}
+
+.loading {
+  background: var(--light-background);
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+  z-index: 99999;
+}
