--- a/src/app/pages/welcome/welcome.page.scss
+++ b/src/app/pages/welcome/welcome.page.scss
@@ -12,7 +12,7 @@
   height: 100%;
   background-image:
     linear-gradient(to bottom, rgba(4, 9, 32, 0.35), rgba(4, 9, 32, 1)),
-    url('../../../assets/images/Rectangle\ 27.png');
+    url('../../../assets/images/welcomeimg.png');
   background-size: cover;
   color: #fff;
 }
