--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,268 @@
-#container {
-  text-align: center;
+@import "swiper/css";
+@import "swiper/css/navigation";
+@import "swiper/css/pagination";
+@import "swiper/css/effect-coverflow";
 
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+
+ion-header {
+  --background: #F8F9FB;
+
+  ion-toolbar {
+    --background: #F8F9FB;
+
+    ion-avatar {
+      width: 40px;
+      height: 40px;
+      margin-inline-end: 16px;
+    }
+  }
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+ion-content {
+  --background: #F8F9FB;
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+.container {
+  padding: 0px 16px 32px;
+  margin: auto;
+  max-width: 1024px;
 }
 
-#container a {
-  text-decoration: none;
+h1 {
+  font-size: 24px;
+  font-family: 'bold';
+  line-height: 29px;
+  color: var(--dark-text);
+}
+
+.search {
+  border-radius: 22px;
+  margin-block: 24px;
+  height: 44px;
+  padding: 6px;
+  background: #fff;
+  box-shadow: 0px 8px 16px #87899e26;
+  display: flex;
+
+  input {
+    outline: none;
+    border: none;
+    width: 100%;
+    height: 100%;
+
+  }
+
+  ::placeholder {
+    color: #87899E;
+    font-size: 14px;
+  }
+
+  img {
+    flex-basis: 10%;
+    max-width: 32px;
+  }
+
+  img:first-of-type {
+    width: 24px;
+    margin-inline: 6px;
+  }
+}
+
+.categories {
+
+  .row {
+    margin-bottom: 24px;
+    display: flex;
+    justify-content: space-between;
+    gap: 16px;
+
+    .category {
+      background: #fff;
+      width: 100%;
+      height: 80px;
+      border-radius: 12px;
+      position: relative;
+      overflow: hidden;
+      box-shadow: 0px 8px 10px #122b915b;
+
+      .overflow {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        z-index: 2;
+        width: 100%;
+        height: 100%;
+        background: rgb(4, 9, 32);
+        background: linear-gradient(115deg, rgba(233, 234, 236, 0.034) 0%, rgba(18, 43, 145, 0.415) 100%);
+      }
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+
+      .content {
+        position: absolute;
+        z-index: 99999;
+        color: #fff;
+        top: 2px;
+        right: 12px;
+
+        h4 {
+          font-size: 16px;
+          font-family: 'bold';
+          margin-bottom: 10px;
+          line-height: 19px;
+
+        }
+
+        p {
+          font-size: 12px;
+          margin-top: 0;
+          line-height: 14px;
+        }
+      }
+    }
+  }
+}
+
+.item_head {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 8px;
+
+  h2 {
+    color: var(--dark-text);
+    font-size: 16px;
+    font-family: 'bold';
+  }
+
+  .end_head {
+    color: var(--ion-color-primary);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 6px;
+  }
+}
+
+.swiper {
+  height: 270px;
+}
+
+.swiper-slide {
+
+  background: #fff;
+
+  /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+
+}
+
+.swiper-slide,
+.add_box_item {
+  border-radius: 12px;
+  flex-direction: column;
+  justify-content: flex-start;
+  overflow: hidden;
+  text-align: start;
+  box-shadow: 0px 8px 16px #87899E26;
+  height: fit-content;
+  position: relative;
+
+  .head_box {
+    height: 120px;
+    width: 100%;
+
+    img {
+      display: block;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    span {
+      position: absolute;
+      background: #F1A330;
+      line-height: 14px;
+      font-size: 12px;
+      font-family: 'bold';
+      color: #fff;
+      border-radius: 5px;
+      padding: 2px 4px;
+      top: 7px;
+      right: 12px;
+    }
+
+  }
+
+  .body_content {
+    padding: 12px;
+    width: 100%;
+
+    .body_head {
+      display: flex;
+      justify-content: space-between;
+
+      p {
+        margin: 0;
+        font-size: 12px;
+        color: #87899E;
+      }
+    }
+
+    .body_title {
+      font-size: 16px;
+      color: var(--dark-text);
+      font-family: 'bold';
+      text-align: start;
+      margin-block: 8px;
+    }
+
+    .price {
+      color: var(--ion-color-primary);
+      font-family: 'bold';
+      margin-block: 0 8px;
+    }
+  }
+
+  .footer_content {
+    display: flex;
+    justify-content: flex-start;
+    gap: 24px;
+    align-items: center;
+    border-top: 1px solid rgba(135, 137, 158, 25%);
+
+    p {
+      font-size: 12px;
+      line-height: 14px;
+      color: #87899E;
+      margin-bottom: 0;
+      display: flex;
+      align-items: center;
+      gap: 6px;
+    }
+  }
+}
+
+.add_box_item {
+  margin-bottom: 16px;
+
+  .head_box {
+    height: 160px;
+  }
 }
