--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,8 +1,7 @@
-@import "swiper/css";
-@import "swiper/css/navigation";
-@import "swiper/css/pagination";
-@import "swiper/css/effect-coverflow";
-
+// @import "swiper/css";
+// @import "swiper/css/navigation";
+// @import "swiper/css/pagination";
+// @import "swiper/css/effect-coverflow";
 
 ion-header {
   --background: #F8F9FB;
