--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -86,7 +86,7 @@
       }
     }" class="mySwiper animate__animated animate__fadeInLeft duration">
       <ng-template swiperSlide class="animate__animated animate__fadeInLeft duration">
-        <div class="head_box">
+        <div class="head_box" (click)="navigate('details')">
           <span>مميز</span>
           <img src="../../assets/images/img_card.png" alt="">
         </div>
@@ -337,4 +337,11 @@
       </div>
     </div>
   </div>
+
+
+  <ion-fab vertical="bottom" horizontal="start" slot="fixed">
+    <ion-fab-button mode="ios" (click)="navigate('add')">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
